--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -31,3 +31,17 @@ body {
     text-wrap: balance;
   }
 }
+
+::-webkit-scrollbar{
+  width: 15px;
+}
+
+::-webkit-scrollbar-track{
+  background-color: #1c1f2e;
+}
+
+::-webkit-scrollbar-thumb{
+  background: linear-gradient(to bottom, #243353, #80BEB6);;
+  border-radius: 10px;
+  border: 3px solid #1c1f2e;
+}
